deploy/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewmaster
  namespace: viewmaster
  labels:
    app: viewmaster
spec:
  selector:
    matchLabels:
      app: viewmaster
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: viewmaster
        tier: app
    spec:
      volumes:
        - name: viewmaster-app-data
          persistentVolumeClaim:
            claimName: viewmaster-app-pvc
        - name: nginx-config
          configMap:
            name: viewmaster-nginx-config
      containers:
        - image: pmichali/viewmaster-app:v0.3.2
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
              name: app
          volumeMounts:
            - name: viewmaster-app-data
              mountPath: /vol/web
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
              name: nginx
          volumeMounts:
            - name: viewmaster-app-data
              mountPath: /vol/web
            - name: nginx-config
              mountPath: /etc/nginx/conf.d

        # - image: pmichali/viewmaster-proxy:latest
        #   imagePullPolicy: Always
        #   name: proxy
        #   ports:
        #     - containerPort: 8000
        #       name: proxy
        #   volumeMounts:
        #     - name: viewmaster-app-data
        #       mountPath: /vol/web
        #   env:
        #     - name: APP_HOST
        #       value: '127.0.0.1'
        #     - name: APP_PORT
        #       value: '8080'
