deploy/django.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewmaster
  namespace: viewmaster
  labels:
    app: viewmaster
spec:
  ports:
    - port: 8000
      targetPort: 8080
  selector:
    app: viewmaster
    tier: app
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewmaster
  namespace: viewmaster
  labels:
    app: viewmaster
spec:
  selector:
    matchLabels:
      app: viewmaster
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: viewmaster
        tier: app
    spec:
      volumes:
        - name: viewmaster-app-data
          persistentVolumeClaim:
            claimName: viewmaster-app-pvc
      containers:

        - image: pmichali/viewmaster-app:v0.1.1
          imagePullPolicy: IfNotPresent
          name: app
          ports:
            - containerPort: 8080
              name: app
          volumeMounts:
            - name: viewmaster-app-data
              mountPath: /vol/web
