deploy/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewmaster-service
  namespace: viewmaster
  labels:
    app: viewmaster
spec:
  ports:
    - port: 8000
      name: http
      targetPort: 80  # Points to Nginx
  selector:
    app: viewmaster
    tier: app
  type: LoadBalancer
