deploy/viewmaster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viewmaster
  namespace: viewmaster
  annotations:
    cert-manager.io/issuer: "viewmaster-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: secureapps-redirect2https@kubernetescrd
spec:
  tls:
    - hosts:
        - movies.my-domain.com
      secretName: tls-viewmaster-ingress-http
  rules:
    - host: movies.my_domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: viewmaster-service
                port:
                  name: http
