deploy/viewmaster-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viewmaster
  namespace: viewmaster
  annotations:
    cert-manager.io/issuer: "viewmaster-prod-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: secureapps-redirect2https@kubernetescrd
spec:
  tls:
    - hosts:
        - movies.access2.one
      secretName: viewmaster-prod-cert
  rules:
    - host: movies.access2.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: viewmaster-service
                port:
                  name: http
